--- a/Uber prices.ipynb
+++ b/Uber prices.ipynb
@@ -1006,7 +1006,7 @@
     "df = df[(df.pickup_latitude <90) & (df.dropoff_latitude >-90) & \n",
     "(df.pickup_latitude >-90) & (df.dropoff_latitude <90) & \n",
     "(df.pickup_longitude >-180) & (df.pickup_longitude <180) &\n",
-    "(df.dropoff_longitude >-180) & (df.dropoff_latitude <180)\n",
+    "(df.dropoff_longitude >-180) & (df.dropoff_longitude <180)\n",
     "]"
    ]
   },
